2017-09-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Make halfpintl public, with an stk_ prefix

	* sampling/private/halfpintl.m: Remove from private directory.
	* sampling/stk_halfpintl.m: Renamed from halfpintl.m.
	* admin/octpkg/INDEX: Expose stk_halfpintl in the INDEX.
	* sampling/stk_sampcrit_akg_eval.m: Update.
	* admin/octpkg/patches/comment-out-unit-tests-in-private-functions.patch: Remove.
	* admin/octpkg/patches/series: Update.

	Use Octave's native test function on Octave

	* misc/test/stk_test.m: Use Octave's native test function on Octave.
	* misc/test/stk_runtests.m: Similarly, use Octave's native
	__run_test_suite__ function when running on Octave.
	* admin/octpkg/patches/use-native-test-function.patch: Remove patch.
	* admin/octpkg/patches/series: Remove patch.
	* admin/octpkg/INDEX: Add stk_test to the INDEX.

2017-09-01  Julien Bect  <julien.bect@centralesupelec.fr>

	Multiply/divide an stk_dataframe object by a scalar

	* arrays/@stk_dataframe/mtimes.m: Implement a special case for the
	multiplication of an stk_dataframe object by a numerical scalar.
	* arrays/@stk_dataframe/mldivide.m: Idem for left division.
	* arrays/@stk_dataframe/mrdivide.m: Idem for right division.

	Overload left/right matrix division for stk_dataframe objects

	* arrays/@stk_dataframe/mldivide.m: New function.
	* arrays/@stk_dataframe/mrdivide.m: New function.
	* admin/octpkg/INDEX: Add new functions to the INDEX.

	stk_benchmark_predict.m: The boxplot function might be unavailable

	* misc/benchmarks/stk_benchmark_predict.m: Wrap call to boxplot in
	try-catch block, since the boxplot function might be unavailable.

	@stk_sampcrit_ei/set.m: Remove unnecessary assert

	* sampling/@stk_sampcrit_ei/set.m: Remove unnecessary assert,
	since only scalar output models are supported in STK at this time.

	Remove support for old-style .a structures

	* arrays/@stk_dataframe/private/get_column_number.c: Remove
	support for old-style .a structures.