@@ -66,130 +66,14 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function EI = stk_sampcrit_ei_eval (arg1, arg2, arg3)
+function EI = stk_sampcrit_ei_eval (zp_mean, zp_std, zi)
 
-if isa (arg2, 'stk_model_gpposterior')
-    %
-    % WARNING: DEPRECATED USE !
-    %
-    % We keep this syntax in 2.4.x to avoid breaking things in a bugfix release
-    % but it will be removed in future releases
-    %
-    warn_about_deprecated_use ('EI = stk_sampcrit_ei_eval (xt, M_post, goal)');
-    
-    if nargin > 3
-        stk_error ('Too many input arguments.', 'TooManyInputArgs');
-    end
-    
-    xt = arg1;
-    M_post = arg2;
-    
-    if nargin < 3
-        goal = 'minimize';
-    else
-        goal = arg3;
-    end
-    
-    zi = M_post.output_data;  assert (size (zi, 2) == 1);
-    zp = stk_predict (M_post, xt);
-    
-    zp_mean = zp.mean;
-    zp_std = sqrt (zp.var);
-    
-elseif (isa (arg2, 'stk_dataframe')) ...
-        && (isequal (arg2.colnames, {'mean', 'var'}))
-    %
-    % WARNING: DEPRECATED USE !
-    %
-    % We keep this syntax in 2.4.x to avoid breaking things in a bugfix release
-    % but it will be removed in future releases.
-    %
-    warn_about_deprecated_use ('EI = stk_sampcrit_ei_eval (xt, zp, goal)');
-    
-    if nargin > 3
-        stk_error ('Too many input arguments.', 'TooManyInputArgs');
-    end
-    
-    % Remark: With this syntax, xt is ignored.  Beurk.
-    zp = arg2;
-    
-    if nargin < 3
-        goal = 'minimize';
-    else
-        goal = arg3;
-    end
-    
-    zp_mean = zp.mean;
-    zp_std = sqrt (zp.var);
-    
-    % TODO: warning !!!
-    
-    % WARNING: The threshold used here is *not* the usual one (maximum of the
-    % posterior mean instead of maximum of the observations).
-    zi = zp_mean;
-    
-else
-    
-    % The syntax
-    %
-    %    EI = stk_sampcrit_ei_eval (zp_mean, zp_std, zi)
-    %
-    % is the one that will be kept for future releases.
-    
-    if nargin > 4
-        stk_error ('Too many input arguments.', 'TooManyInputArgs');
-    end
-    
-    zp_mean = arg1;
-    zp_std = arg2;
-    zi = arg3;
-    
-    goal = 'minimize';
-    
-end
-
-% Minimize or maximize?
-switch goal
-    case 'minimize'
-        minimize = true;
-        threshold = min (zi);
-    case 'maximize'
-        minimize = false;
-        threshold = max (zi);
-    otherwise
-        stk_error (['Incorrect value for argument ''goal'': should be ' ...
-            'either ''minimize'' or ''maximize''.'], 'InvalidArgument');
+if nargin > 4
+    stk_error ('Too many input arguments.', 'TooManyInputArgs');
 end
 
 % Evaluate the sampling criterion
-EI = stk_distrib_normal_ei (threshold, zp_mean, zp_std, minimize);
-
-end % function
-
-
-function warn_about_deprecated_use (s)
-
-warning ('STK:stk_hrect:stk_sampcrit_ei_eval:DeprecatedUse', sprintf ([ ...
-    'The syntax\n'                                                      ...
-    '\n'                                                                ...
-    '   %s\n'                                                           ...
-    '\n'                                                                ...
-    'was introduced by mistake in STK 2.4.0 (without documentation,\n'  ...
-    'but apparently some people read the source code...).\n'            ...
-    '\n'                                                                ...
-    '*** It will not be supported in future releases. ***\n'            ...
-    '\n'                                                                ...
-    'Please use the syntax\n'                                           ...
-    '\n'                                                                ...
-    '   EI = stk_sampcrit_ei_eval (zp_mean, zp_std, zi)\n'              ...
-    '\n'                                                                ...
-    'instead. Sorry for the inconvenience. Use\n'                       ...
-    '\n'                                                                ...
-    '   warning (''off'', '                                             ...
-    '''STK:stk_hrect:stk_sampcrit_ei_eval:DeprecatedUse'')\n'           ...
-    '\n'                                                                ...
-    'if you don''t want to see this warning again. '                    ...
-    'Read the doc for more information.\n'], s));               %#ok<SPWRN>
+EI = stk_distrib_normal_ei (min (zi), zp_mean, zp_std, true);
 
 end % function
 
@@ -214,18 +98,3 @@ end % function
 %! EI1 = stk_sampcrit_ei_eval (zp.mean, sqrt (zp.var), min (zi));
 
 %!assert (isequal (EI1, EIref))
-
-%!test % Deprecated syntax #1 (STK 2.4.0 only, never documented)
-%! M_post = stk_model_gpposterior (M_prior, xi, zi);
-%! EI2 = stk_sampcrit_ei_eval (xt, M_post);
-%! EI2b = stk_sampcrit_ei_eval (xt, M_post, 'minimize');
-%! assert (isequal (EI2, EI2b));  % 'minimize' is the default
-
-%!assert (isequal (EI2, EIref))
-
-%!test % Deprecated syntax #2 (STK 2.4.0 only, never documented)
-%! EI3 = stk_sampcrit_ei_eval ([], zp);
-%! EI3b = stk_sampcrit_ei_eval ([], zp, 'minimize');
-%! assert (isequal (EI3, EI3b));  % 'minimize' is the default
-
-%!assert (~ isequal (EI3, EIref)); % we *know* that result will be different !!!
